--- a/public/index.html
+++ b/public/index.html
@@ -27,11 +27,11 @@
     <title>React App</title>
   </head>
   <body>
-    <form name="contact" netlify netlify-honeypot="bot-field" hidden>
+    <!-- <form name="contact" netlify netlify-honeypot="bot-field" hidden>
       <input type="text" name="name" />
       <input type="email" name="email" />
       <textarea name="message"></textarea>
-    </form>
+    </form> -->
     <div id="root"></div>
     <!--
       This HTML file is a template.
