--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       name="Lizzy Meg"
       content="Lizzy Meg Professional Dancer and Choreograhper"
     />
-    <link rel="mobile-icon" href="%PUBLIC_URL%/L.png" />
+    <link rel="mobile-icon" href="%PUBLIC_URL%/L.png?v=2" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
